--- a/index.html
+++ b/index.html
@@ -120,12 +120,28 @@
             z-index: 10;
         }
 
+        .hero-logo-bg {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+            animation: rotate 60s linear infinite;
+        }
+
+        @keyframes rotate {
+            from { transform: translate(-50%, -50%) rotate(0deg); }
+            to { transform: translate(-50%, -50%) rotate(360deg); }
+        }
+
         .hero-content {
             text-align: center;
             max-width: 1200px;
             opacity: 0;
             animation: fadeInUp 1.2s ease forwards;
             animation-delay: 0.3s;
+            position: relative;
+            z-index: 1;
         }
 
         .tagline {
@@ -417,6 +433,57 @@
 
     <!-- Hero Section -->
     <section class="hero">
+        <div class="hero-logo-bg">
+            <svg width="300" height="300" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" opacity="0.1">
+                <defs>
+                    <linearGradient id="heroGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" style="stop-color:#6B46C1;stop-opacity:0.5">
+                            <animate attributeName="stop-opacity" values="0.5;0.2;0.5" dur="5s" repeatCount="indefinite"/>
+                        </stop>
+                        <stop offset="100%" style="stop-color:#3B82F6;stop-opacity:0.5">
+                            <animate attributeName="stop-opacity" values="0.5;0.2;0.5" dur="5s" repeatCount="indefinite"/>
+                        </stop>
+                    </linearGradient>
+                </defs>
+                
+                <!-- Large background logo -->
+                <g transform="translate(50, 50)">
+                    <polygon points="0,-35 30,-17.5 30,17.5 0,35 -30,17.5 -30,-17.5" 
+                            fill="none" 
+                            stroke="url(#heroGradient)" 
+                            stroke-width="0.5"/>
+                    
+                    <!-- Animated nodes -->
+                    <circle cx="0" cy="-25" r="3" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="3;5;3" dur="4s" repeatCount="indefinite"/>
+                    </circle>
+                    <circle cx="-15" cy="-12" r="2" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="2;4;2" dur="4s" begin="0.5s" repeatCount="indefinite"/>
+                    </circle>
+                    <circle cx="15" cy="-12" r="2" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="2;4;2" dur="4s" begin="1s" repeatCount="indefinite"/>
+                    </circle>
+                    <circle cx="-20" cy="0" r="3" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="3;5;3" dur="4s" begin="1.5s" repeatCount="indefinite"/>
+                    </circle>
+                    <circle cx="20" cy="0" r="3" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="3;5;3" dur="4s" begin="2s" repeatCount="indefinite"/>
+                    </circle>
+                    <circle cx="0" cy="0" r="4" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="4;6;4" dur="4s" begin="2.5s" repeatCount="indefinite"/>
+                    </circle>
+                    <circle cx="-15" cy="12" r="2" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="2;4;2" dur="4s" begin="3s" repeatCount="indefinite"/>
+                    </circle>
+                    <circle cx="15" cy="12" r="2" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="2;4;2" dur="4s" begin="3.5s" repeatCount="indefinite"/>
+                    </circle>
+                    <circle cx="0" cy="25" r="3" fill="url(#heroGradient)">
+                        <animate attributeName="r" values="3;5;3" dur="4s" begin="4s" repeatCount="indefinite"/>
+                    </circle>
+                </g>
+            </svg>
+        </div>
         <div class="hero-content">
             <h1 class="tagline">Transforming Business<br>Through Intelligent Agents</h1>
             <p class="subtitle">We architect LLM-powered solutions that think, learn, and deliver measurable value</p>
